pyk/src/tests/kore/test-data/definitions/should-fail/test-bool-4.kore
[]
module BOOL
    hooked-sort Bool{} [hook{}("BOOL.Bool"), hasDomainValues{}()]
    alias falseBool{}() : Bool{} where falseBool{}() := \dv{Bool{}}("untrue") []
endmodule
[]
